tests/NormalTests/paczka1/small_fuzzy/12197251.err
Error in line 6: 6JRy S434 123,4
Error in line 11: Lat5cKVb A953 48,6
